--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h2>Submit Your Details</h2>
     <form id="userForm">
-        <input type="text" id="id" placeholder="Enter ID" required><br><br>
-        <input type="text" id="Password" placeholder="Enter Password" required><br><br>
-        <button type="submit">login</button>
+        <input type="text" id="name" placeholder="Enter Name" required><br><br>
+        <input type="email" id="email" placeholder="Enter Email" required><br><br>
+        <button type="submit">Submit</button>
     </form>
 
     <script>
@@ -19,7 +19,7 @@
             
             const name = document.getElementById("name").value;
             const email = document.getElementById("email").value;
-            const scriptURL = "https://script.google.com/macros/s/AKfycbxykI95yyE-euC-83Ayc9rg8ODGTxkn4-CobA4uMtlCMzTBJZXJMLuqR1bBM_ZGFRJW/exec"; // Replace with your script URL
+            const scriptURL = "https://script.google.com/macros/s/AKfycbxykI95yyE-euC-83Ayc9rg8ODGTxkn4-CobA4uMtlCMzTBJZXJMLuqR1bBM_ZGFRJW/exe"; // Replace with your script URL
             
             const response = await fetch(scriptURL, {
                 method: "POST",
